@@ -23,8 +23,12 @@
 typedef struct
 {
 	char	*addr;
-	double	min, avg, max;
-	int	rcv, cnt;
+	double	min;
+	double	avg;
+	double	max;
+	int	rcv;
+	int	cnt;
+	char	*status;	/* array of individual response statuses: 1 - valid, 0 - timeout */
 }
 ZBX_FPING_HOST;
 
